force-app/main/default/objects/InventoryMoveLine__c/InventoryMoveLine__c.object-meta.xml
<CustomObject>
    <label>在庫移動明細</label>
    <nameField>
        <displayFormat>INVML-{0000000000}</displayFormat>
        <label>在庫移動明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>