force-app/main/default/objects/InventoryMoveLine__c/fields/barcode__c.field-meta.xml
<CustomField>
    <fullName>barcode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FBYコード</label>
    <referenceTo>Barcode__c</referenceTo>
    <relationshipLabel>在庫移動明細</relationshipLabel>
    <relationshipName>inventory_move_lines</relationshipName>
    <type>Lookup</type>
</CustomField>