force-app/main/default/objects/InventoryMoveLine__c/fields/calory_in_kcal_per_unit__c.field-meta.xml
<CustomField>
    <fullName>calory_in_kcal_per_unit__c</fullName>
    <label>1つあたりのカロリー (kcal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>