force-app/main/default/objects/InventoryMoveLine__c/fields/expiration_date_relative__c.field-meta.xml
<CustomField>
    <fullName>expiration_date_relative__c</fullName>
    <label>賞味期限 (相対)</label>
    <type>Date</type>
</CustomField>