force-app/main/default/objects/InventoryMoveLine__c/fields/expiration_date_relative_days__c.field-meta.xml
<CustomField>
    <fullName>expiration_date_relative_days__c</fullName>
    <label>賞味期限相対値 (日)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>