force-app/main/default/objects/InventoryMoveLine__c/fields/food_name__c.field-meta.xml
<CustomField>
    <fullName>food_name__c</fullName>
    <label>食品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>