force-app/main/default/objects/InventoryMoveLine__c/fields/food_type__c.field-meta.xml
<CustomField>
    <fullName>food_type__c</fullName>
    <label>食品分類</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>調味料</fullName>
            </value>
            <value>
                <fullName>食用油</fullName>
            </value>
            <value>
                <fullName>スプレッド類・乳製品</fullName>
            </value>
            <value>
                <fullName>調理品</fullName>
            </value>
            <value>
                <fullName>スープ</fullName>
            </value>
            <value>
                <fullName>缶詰</fullName>
            </value>
            <value>
                <fullName>粉類</fullName>
            </value>
            <value>
                <fullName>ホームメイキング材料</fullName>
            </value>
            <value>
                <fullName>麺類</fullName>
            </value>
            <value>
                <fullName>パン・シリアル類</fullName>
            </value>
            <value>
                <fullName>穀物</fullName>
            </value>
            <value>
                <fullName>加工肉類</fullName>
            </value>
            <value>
                <fullName>農産乾物</fullName>
            </value>
            <value>
                <fullName>漬物・佃煮</fullName>
            </value>
            <value>
                <fullName>加工水産</fullName>
            </value>
            <value>
                <fullName>農産</fullName>
            </value>
            <value>
                <fullName>菓子</fullName>
            </value>
            <value>
                <fullName>嗜好飲料</fullName>
            </value>
            <value>
                <fullName>飲料</fullName>
            </value>
            <value>
                <fullName>ベビーフード</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>