force-app/main/default/objects/InventoryMoveLine__c/fields/food_type_l1__c.field-meta.xml
<CustomField>
    <fullName>food_type_l1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>食品分類 (L1)</label>
    <referenceTo>FoodTypeL1__c</referenceTo>
    <relationshipLabel>在庫移動明細</relationshipLabel>
    <relationshipName>food_type_l1s</relationshipName>
    <type>Lookup</type>
</CustomField>