force-app/main/default/objects/InventoryMoveLine__c/fields/inventory_move__c.field-meta.xml
<CustomField>
    <fullName>inventory_move__c</fullName>
    <label>在庫移動</label>
    <referenceTo>InventoryMove__c</referenceTo>
    <relationshipLabel>在庫移動明細</relationshipLabel>
    <relationshipName>inventory_move_lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>