force-app/main/default/objects/InventoryMoveLine__c/fields/jan_code__c.field-meta.xml
<CustomField>
    <fullName>jan_code__c</fullName>
    <label>JANコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>