force-app/main/default/objects/InventoryMoveLine__c/fields/net_weight_per_unit__c.field-meta.xml
<CustomField>
    <fullName>net_weight_per_unit__c</fullName>
    <label>正味重量 (g)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>