force-app/main/default/objects/InventoryMoveLine__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>