force-app/main/default/objects/InventoryMoveLine__c/fields/produced_in__c.field-meta.xml
<CustomField>
    <fullName>produced_in__c</fullName>
    <label>生産地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>