force-app/main/default/objects/InventoryMoveLine__c/fields/product_kind__c.field-meta.xml
<CustomField>
    <fullName>product_kind__c</fullName>
    <label>品種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>