force-app/main/default/objects/InventoryMoveLine__c/fields/production_date__c.field-meta.xml
<CustomField>
    <fullName>production_date__c</fullName>
    <label>生産日</label>
    <type>Date</type>
</CustomField>