force-app/main/default/objects/InventoryMoveLine__c/fields/quantity_per_unit__c.field-meta.xml
<CustomField>
    <fullName>quantity_per_unit__c</fullName>
    <label>入数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>