force-app/main/default/objects/InventoryMoveLine__c/fields/syokuhin_count__c.field-meta.xml
<CustomField>
    <fullName>syokuhin_count__c</fullName>
    <label>数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>