force-app/main/default/objects/InventoryMoveLine__c/fields/syoumi_kigen__c.field-meta.xml
<CustomField>
    <fullName>syoumi_kigen__c</fullName>
    <label>賞味期限</label>
    <type>Date</type>
</CustomField>