force-app/main/default/objects/InventoryMoveLine__c/fields/weight_in_gram_per_unit__c.field-meta.xml
<CustomField>
    <fullName>weight_in_gram_per_unit__c</fullName>
    <label>1つあたりの重量 (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>