force-app/main/default/objects/InventoryMoveLine__c/fields/X1_kcal__c.field-meta.xml
<CustomField>
    <fullName>X1_kcal__c</fullName>
    <label>1つあたりのカロリー (kcal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>