force-app/main/default/objects/InventoryMoveLine__c/fields/X1_kg__c.field-meta.xml
<CustomField>
    <fullName>X1_kg__c</fullName>
    <label>1つあたりの重量 (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>